--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="profile.jpg" alt="Your Profile Picture" class="profile-picture">
+            <img src="Profile.jpg" alt="Your Profile Picture" class="profile-picture">
             <h1>SARKESH P</h1>
             <p>I Am BCA Student</p>
         </div>
@@ -167,7 +167,7 @@
         <div class="section-content">
             <center>
             <h2>Resume♤</h2>
-            <a href="Resume.jpg" target="_blank" class="download-button">View My Resume</a>
+            <a href="resume.jpg" target="_blank" class="download-button">View My Resume</a>
         </center>
         </div>
         
